--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/practice.rs"
 [dependencies]
 aws-config = "0.54.1"
 aws-sdk-dynamodb = "0.24.0"
+serde_dynamo = { version = "4.1.0", features = ["aws-sdk-dynamodb+0_24"] }
 axum = "0.6.7"
 axum-macros = "0.3.4"
 hyper = { version = "0.14.24", features = ["full"]}
