--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -29,3 +29,4 @@ serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.93"
 axum-extra = { version = "0.7.0", features = [ "cookie"]}
 async-trait = "0.1.65"
+futures = "0.3.27"
