--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,10 @@ path = "src/main.rs"
 name = "practice"
 path = "src/practice.rs"
 
+[[bin]]
+name = "events"
+path = "src/events-service.rs"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,7 +23,7 @@ path = "src/practice.rs"
 aws-config = "0.54.1"
 aws-sdk-dynamodb = "0.24.0"
 serde_dynamo = { version = "4.1.0", features = ["aws-sdk-dynamodb+0_24"] }
-axum = "0.6.7"
+axum = {version = "0.6.7", features = ["macros", "ws"]}
 axum-macros = "0.3.4"
 hyper = { version = "0.14.24", features = ["full"]}
 rusty_ulid = "2.0.0"
@@ -30,3 +34,4 @@ serde_json = "1.0.93"
 axum-extra = { version = "0.7.0", features = [ "cookie"]}
 async-trait = "0.1.65"
 futures = "0.3.27"
+futures-util = "0.3.27"
