--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,6 +16,10 @@ path = "src/practice.rs"
 name = "events"
 path = "src/events-service.rs"
 
+[[bin]]
+name = "message_consumer"
+path = "src/message-consumer.rs"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -35,3 +39,4 @@ axum-extra = { version = "0.7.0", features = [ "cookie"]}
 async-trait = "0.1.65"
 futures = "0.3.27"
 futures-util = "0.3.27"
+lapin = {version = "2.1.1", features = ["codegen", "rustls", "rustls-native-certs", "serde_json"]}
