--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,8 +12,13 @@ services:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
     user: root #user must be root for some reason here.
+  rabbitmq:
+    image: rabbitmq:3.11.11-management
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - "rabbitmq_data:/var/lib/rabbitmq"
 
-
-
-# volumes:
-  # dynamodb:
+volumes:
+  rabbitmq_data:
